--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 html, body{
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
     
 }
 /*divs gerais*/
@@ -23,7 +24,7 @@ html, body{
 header{
    
     background-color: #022859;
-    padding: 10px 2%; /*espaçamento de 2% 
+    padding: 10px 2% 20px 2%; /*espaçamento de 2% 
     na hora do responsivo*/
 }
 
@@ -53,7 +54,7 @@ section.cover-form{
 }
 
 .bg{
-    height: 700px;
+    height: 600px;
     background-position: center;
     background-size: cover;
     background-image: url('../images/bg-form.jpg');
@@ -62,20 +63,95 @@ section.cover-form{
 .form-container{
     margin-right: 40px;
     float: right;
-    width: 500px;
-    height: 100px;
-    background-color: white; 
+    width: 400px;
+    height: 105%;
+    z-index: 2;
+    position: relative;
+    top: -20px; 
+    background-color:white; 
+    -webkit-box-shadow: 0px 5px 5px 2px rgba(192,196,250,1);
+    -moz-box-shadow: 0px 5px 5px 2px rgba(192,196,250,1);
+    box-shadow: 0px 5px 5px 2px rgba(192,196,250,1);
 }
 
 .form-container h2{
     text-align: center;
     font-weight: normal;
-    padding: 15px;
+    padding: 15px 10px;
     color: #022859;
     font-size: 18px;
     background-color: #F2B544;
 }
 
+.form-container form{
+    margin-top: 8px;
+    padding: 15px;
+}
+
+.form-container p{
+    font-size: 14px;
+    color: #022859;
+   
+    
+}
+
+.form-container form input[type=text]{
+    width: 100%;
+    border: solid 1px #F2884B;
+    height: 45px;    
+    line-height: 45px;
+    padding-left: 10px;
+}
+
+.form-wraper:not(:first-child){
+    margin-top: 40px;
+}
+
+.form-wraper: last-child{
+    margin-top: 20px;
+}
+
+.form-container form input[type=submit]{
+    background-color: #022859;
+    color: white;
+    text-transform: uppercase;
+    width: 100%;
+    font-size: 25px;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+section.chamada{
+    z-index: 1;
+    width: 100%;
+    position: relative;
+    top: -50px;
+    text-align: center;
+    display: inline-block;
+    
+}
+
+section.chamada .container{
+    padding: 50px 0;
+    background-color: #F2B544;
+}
+
+section.chamada h2{
+    margin-top: 10px;
+    width: 96%;
+    display: inline-block;
+    max-width: 600px;
+    color: white;
+    font-size: 25px;
+    font-weight: normal;
+}
+
+section.chamada p{
+    color: white;
+    font-size: 18px;
+}
 
 /*responsivo*/
 @media screen and (max-width: 510px){
